new lines cover by tests